<resources>
    <string name="hello_world">Hello World!</string>
    <string name="input_text">input types</string>
    <string name="app_name">MyHomeWork</string>
    <string name="switch_me">switch me!</string>
    <string name="check_me">Check me!</string>
    <string name="input_types">input types</string>
    <string name="ems">EMS</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_multiplication">x</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_ac">AC</string>
    <string name="key_erase"><![CDATA[<-]]></string>
    <string name="key_percent">%</string>
    <string name="key_division">÷</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_minus">-</string>
    <string name="key_plus">+</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="key_result">=</string>
    <string name="default_value">"0.0"</string>
    <string name="back">back</string>
    <string name="themes">Темы</string>
    <string name="default_theme">Классическая тема</string>
    <string name="red_green_theme">Красный/Зеленый</string>
    <string name="black_white_theme">Черный/Белый</string>
</resources>