<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="end|bottom"
        android:text="@string/default_value"
        android:textColor="@color/white"
        android:textSize="@dimen/result_text"
        app:layout_constraintBottom_toTopOf="@id/btn_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="5" />


    <Button
        android:id="@+id/btn_ac"
        style="?attr/calcFunBtn"
        android:text="@string/key_ac"
        app:layout_constraintBottom_toTopOf="@id/btn_7"
        app:layout_constraintEnd_toStartOf="@id/btn_erase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultView"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_erase"
        style="?attr/calcFunBtn"
        android:text="@string/key_erase"
        app:layout_constraintBottom_toTopOf="@id/btn_8"
        app:layout_constraintEnd_toStartOf="@id/btn_percent"
        app:layout_constraintStart_toEndOf="@id/btn_ac"
        app:layout_constraintTop_toBottomOf="@id/resultView"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_percent"
        style="?attr/calcFunBtn"
        android:text="@string/key_percent"
        app:layout_constraintBottom_toTopOf="@id/btn_9"
        app:layout_constraintEnd_toStartOf="@id/btn_division"
        app:layout_constraintStart_toEndOf="@id/btn_erase"
        app:layout_constraintTop_toBottomOf="@id/resultView"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_division"
        style="?attr/calcFunBtn"
        android:text="@string/key_division"
        app:layout_constraintBottom_toTopOf="@id/btn_multiplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/btn_percent"
        app:layout_constraintTop_toBottomOf="@id/resultView"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_7"
        style="?attr/calcNumBtn"
        android:text="@string/key_7"
        app:layout_constraintBottom_toTopOf="@id/btn_4"
        app:layout_constraintEnd_toStartOf="@id/btn_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ac"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_8"
        style="?attr/calcNumBtn"
        android:text="@string/key_8"
        app:layout_constraintBottom_toTopOf="@id/btn_5"
        app:layout_constraintEnd_toStartOf="@id/btn_9"
        app:layout_constraintStart_toEndOf="@id/btn_7"
        app:layout_constraintTop_toBottomOf="@id/btn_erase"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_9"
        style="?attr/calcNumBtn"
        android:text="@string/key_9"
        app:layout_constraintBottom_toTopOf="@id/btn_6"
        app:layout_constraintEnd_toStartOf="@id/btn_multiplication"
        app:layout_constraintStart_toEndOf="@id/btn_8"
        app:layout_constraintTop_toBottomOf="@id/btn_percent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_multiplication"
        style="?attr/calcFunBtn"
        android:text="@string/key_multiplication"
        app:layout_constraintBottom_toTopOf="@id/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_9"
        app:layout_constraintTop_toBottomOf="@id/btn_division"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_4"
        style="?attr/calcNumBtn"
        android:text="@string/key_4"
        app:layout_constraintBottom_toTopOf="@id/btn_1"
        app:layout_constraintEnd_toStartOf="@id/btn_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_7"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_5"
        style="?attr/calcNumBtn"
        android:text="@string/key_5"
        app:layout_constraintBottom_toTopOf="@id/btn_2"
        app:layout_constraintEnd_toStartOf="@id/btn_6"
        app:layout_constraintStart_toEndOf="@id/btn_4"
        app:layout_constraintTop_toBottomOf="@id/btn_8"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_6"
        style="?attr/calcNumBtn"
        android:text="@string/key_6"
        app:layout_constraintBottom_toTopOf="@id/btn_3"
        app:layout_constraintEnd_toStartOf="@id/btn_minus"
        app:layout_constraintStart_toEndOf="@id/btn_5"
        app:layout_constraintTop_toBottomOf="@id/btn_9"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_minus"
        style="?attr/calcFunBtn"
        android:text="@string/key_minus"
        app:layout_constraintBottom_toTopOf="@id/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_6"
        app:layout_constraintTop_toBottomOf="@id/btn_multiplication"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_1"
        style="?attr/calcNumBtn"
        android:text="@string/key_1"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        app:layout_constraintEnd_toStartOf="@id/btn_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_4"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_2"
        style="?attr/calcNumBtn"
        android:text="@string/key_2"
        app:layout_constraintBottom_toTopOf="@id/btn_0"
        app:layout_constraintEnd_toStartOf="@id/btn_3"
        app:layout_constraintStart_toEndOf="@id/btn_1"
        app:layout_constraintTop_toBottomOf="@id/btn_5"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_3"
        style="?attr/calcNumBtn"
        android:text="@string/key_3"
        app:layout_constraintBottom_toTopOf="@id/btn_dot"
        app:layout_constraintEnd_toStartOf="@id/btn_plus"
        app:layout_constraintStart_toEndOf="@id/btn_2"
        app:layout_constraintTop_toBottomOf="@id/btn_6"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_plus"
        style="?attr/calcFunBtn"
        android:text="@string/key_plus"
        app:layout_constraintBottom_toTopOf="@id/btn_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_3"
        app:layout_constraintTop_toBottomOf="@id/btn_minus"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_0"
        style="?attr/calcNumBtn"
        android:text="@string/key_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_dot"
        style="?attr/calcNumBtn"
        android:text="@string/key_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_result"
        app:layout_constraintStart_toEndOf="@id/btn_2"
        app:layout_constraintTop_toBottomOf="@id/btn_3"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/btn_result"
        style="?attr/calcResBtn"
        android:text="@string/key_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_dot"
        app:layout_constraintTop_toBottomOf="@id/btn_plus"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>