<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDCDCD"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textAllCaps="true"
        android:textColor="@color/design_default_color_error"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text"
        android:padding="8dp"
        android:textColor="#ffff00"
        android:textColorHint="@color/design_default_color_surface"
        android:textSize="27sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:scaleY="2"
            android:text="@string/switch_me"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:text="@string/check_me"
            android:textColor="#ffff00"
            android:textSize="33dp" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000ff" />
    </LinearLayout>

    <CalendarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <Button
            android:id="@+id/switch_to_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_types" />

        <Button
            android:id="@+id/switch_to_ems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ems" />
    </LinearLayout>
</LinearLayout>